--- a/toyboss_core/templates/product.html
+++ b/toyboss_core/templates/product.html
@@ -61,8 +61,8 @@
     <div class="product__section-all">
       <section class="product__section-group">
         <div class="parallax" style="background: url('img/jpg/slider-background.jpg')">
-          <div class="paralax-img"><img src="img/png/img9.png"/></div>
-          <div class="paralax-img2"><img src="img/png/img10.png"/></div>
+          <div class="paralax-img"><img src="{% static 'img/png/img9.png' %}"/></div>
+          <div class="paralax-img2"><img src="{% static 'img/png/img10.png' %}"/></div>
           <div class="parallax-heading">
             <h2>полукапченые колбасы</h2>
           </div>
@@ -74,61 +74,61 @@
                 <div class="product__card-all">
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img9.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img9.png' %}"/></div>
                       <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
                     </div>
                   </div>
@@ -141,8 +141,8 @@
       </section>
       <section class="product__section-group">
         <div class="parallax" style="background: url('img/jpg/slider-background.jpg')">
-          <div class="paralax-img"><img src="img/png/img9.png"/></div>
-          <div class="paralax-img2"><img src="img/png/img10.png"/></div>
+          <div class="paralax-img"><img src="{% static 'img/png/img9.png' %}"/></div>
+          <div class="paralax-img2"><img src="{% static 'img/png/img10.png' %}"/></div>
           <div class="parallax-heading">
             <h2>вареные колбасы</h2>
           </div>
@@ -154,61 +154,61 @@
                 <div class="product__card-all">
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img9.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img9.png' %}"/></div>
                       <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
                     </div>
                   </div>
@@ -221,8 +221,8 @@
       </section>
       <section class="product__section-group">
         <div class="parallax" style="background: url('img/jpg/slider-background.jpg')">
-          <div class="paralax-img"><img src="img/png/img9.png"/></div>
-          <div class="paralax-img2"><img src="img/png/img10.png"/></div>
+          <div class="paralax-img"><img src="{% static 'img/png/img9.png' %}"/></div>
+          <div class="paralax-img2"><img src="{% static 'img/png/img10.png' %}"/></div>
           <div class="parallax-heading">
             <h2>сэндвичи</h2>
           </div>
@@ -234,61 +234,61 @@
                 <div class="product__card-all">
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
                     </div>
                   </div>
                   <div class="product__card-inner">
                     <div class="product__card">
-                      <div class="product__card-img"><img src="img/png/img9.png"/></div>
+                      <div class="product__card-img"><img src="{% static 'img/png/img9.png' %}"/></div>
                       <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
                     </div>
                   </div>
@@ -314,15 +314,15 @@
               </ul>
             </nav>
             <div class="footer-link">
-              <div class="network-link"><a href="#"><img src="img/svg/instagram-icon.svg"/></a><a href="#"><img src="img/svg/facebook-icon.svg"/></a><a href="#"><img src="img/svg/whatsapp-icon.svg"/></a></div>
+              <div class="network-link"><a href="#"><img src="{% static 'img/svg/instagram-icon.svg' %}"/></a><a href="#"><img src="{% static 'img/svg/facebook-icon.svg' %}"/></a><a href="#"><img src="{% static 'img/svg/whatsapp-icon.svg' %}"/></a></div>
             </div>
           </div>
         </div>
       </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.js' %}" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper@11.1.14/swiper.min.js"></script>
-    <script src="js/libs.js"></script>
-    <script src="js/main.js"></script>
+    <script src="{% static 'js/libs.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
   </body>
 </html>
