--- a/toyboss_core/templates/product.html
+++ b/toyboss_core/templates/product.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
 {% block content %}
+
+  <body>
 
     <section class="product">
       <div class="container">
@@ -30,14 +31,12 @@
             <div class="product-right-all">
               <div class="product-right">
                 <div class="product__card-all">
-                {% for product in  %}
                   <div class="product__card-inner">
                     <div class="product__card">
                       <div class="product__card-img"><img src="{% static 'img/png/img9.png' %}"/></div>
                       <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
                     </div>
                   </div>
-                  {{ endfor }}
                   <div class="product__card-inner">
                     <div class="product__card">
                       <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
@@ -100,7 +99,7 @@
         </div>
       </section>
       <section class="product__section-group">
-        <div class="parallax" style="background: url('{% static 'img/jpg/slider-background.jpg' %})">
+        <div class="parallax" style="background: url({% static 'img/jpg/slider-background.jpg' %})">
           <div class="paralax-img"><img src="{% static 'img/png/img9.png' %}"/></div>
           <div class="paralax-img2"><img src="{% static 'img/png/img10.png' %}"/></div>
           <div class="parallax-heading">
@@ -260,4 +259,5 @@
         </div>
       </section>
     </div>
+  </body>
 {% endblock %}
